--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=https://studenti.sum.ba/projekti/rwa/2023/g17
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=rentacarapp
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=rwa172023
+DB_USERNAME=rwa172022
+DB_PASSWORD=csdigital2022
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
